--- a/app/src/main/res/layout/coinlist_row.xml
+++ b/app/src/main/res/layout/coinlist_row.xml
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:checkMark="@drawable/checkbox_blank_outline"
         android:fontFamily="@font/roboto"
         android:text="coin name"
         android:checked="false"
